# polyansky-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  bus_stops_map.html  pyproject.toml  requirements.txt
data/: bus_stops.csv  generate_schedules.py  map_bus_stops.py  map_routes.py  parse_stops.py  parsed_stops.csv  partial_stops_schedule.csv  polyansky.db  route_schedules.csv  route_schedules_generated.csv  route_stops.csv  route_stops_real.csv  routes.csv  routes_real.csv  stop_schedules.csv  stop_schedules_generated.csv  stops.csv  stops.json
data/visualizations/: bus_routes_visualization.html
src/: __main__.py
src/bot/: config.py  main.py
src/bot/handlers/: __init__.py  admin.py  bus_route.py  common.py  organizations.py  start.py
src/bot/keyboards/: builders.py  callbacks.py
src/bot/middlewares/: database.py
src/bot/states/: bus_route.py
src/database/: connection.py  models.py
src/database/repositories/: __init__.py  base.py  bus_route.py  bus_route_schedule.py  bus_route_search.py  bus_route_stop.py  bus_stop.py  bus_stop_schedule.py  display_bus_stop.py  organization.py  organization_category.py
src/migrations/: initial_data.py
src/scripts/: generate_address.py  generate_schedules.py  interpolate_schedule.py  map_bus_stops.py  map_routes.py
src/services/: route_finder.py
src/services/draw_route/: __init__.py
src/services/route_finder/: __init__.py  types.py  utils.py
src/utils/: animated_message.py  get_path.py  service_days.py
