[project]
name = "polyansky-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "aiosqlite>=0.22.1",
    "contextily>=1.7.0",
    "environs>=14.5.0",
    "geopandas>=1.1.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "pipe>=2.2",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.45",
]

[dependency-groups]
dev = [
    "folium>=0.20.0",
    "polyline>=2.0.4",
    "pre-commit>=4.5.1",
    "ruff>=0.14.11",
    "ty>=0.0.10",
]


[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
extend-include = ["*.ipynb"]
fix=true
unsafe-fixes=true
line-length=90

[tool.ruff.lint]
extend-select = ["I"]
ignore=["E402"]

[tool.pylint.messages_control]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "broad-exception-caught",
    "invalid-name"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
